add logic for users personal records + add logic for common and super admin pages