@@ -1,15 +1,16 @@
 package by.chaika19.service;
 
+import by.chaika19.entity.User;
 import by.chaika19.repository.RecordRepository;
 import by.chaika19.entity.Record;
 import by.chaika19.entity.RecordStatus;
 import by.chaika19.entity.dto.RecordsContainerDto;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -17,39 +18,45 @@ import java.util.stream.Collectors;
 @Transactional
 public class RecordService {
     private final RecordRepository recordRepository;
+    private final UserService userService;
 
     @Autowired
-    public RecordService(RecordRepository recordRepository) {
+    public RecordService(RecordRepository recordRepository, UserService userService) {
         this.recordRepository = recordRepository;
+        this.userService = userService;
     }
 
     @Transactional(readOnly = true)
     public RecordsContainerDto findAllRecords(String filterMode) {
-        List<Record> records = recordRepository.findAll(Sort.by(Sort.Direction.ASC, "id"));
+        User user = userService.getCurrentUser();
+        List<Record> records = user.getRecords().stream()
+                .sorted(Comparator.comparingInt(Record::getId))
+                .collect(Collectors.toList());
         int numberOfDoneRecords = (int) records.stream().filter(record -> record.getStatus() == RecordStatus.DONE).count();
         int numberOfActiveRecords = (int) records.stream().filter(record -> record.getStatus() == RecordStatus.ACTIVE).count();
 
         if (filterMode == null || filterMode.isBlank()) {
-            return new RecordsContainerDto(records, numberOfDoneRecords, numberOfActiveRecords);
+            return new RecordsContainerDto(user.getName(), records, numberOfDoneRecords, numberOfActiveRecords);
         }
 
         String filterModeInUpperCase = filterMode.toUpperCase();
         List<String> allowedFilterModes = Arrays.stream(RecordStatus.values())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
         if (allowedFilterModes.contains(filterModeInUpperCase)) {
             List<Record> filterRecords = records.stream()
                     .filter(record -> record.getStatus() == RecordStatus.valueOf(filterModeInUpperCase))
                     .collect(Collectors.toList());
-            return new RecordsContainerDto(filterRecords, numberOfDoneRecords, numberOfActiveRecords);
+            return new RecordsContainerDto(user.getName(), filterRecords, numberOfDoneRecords, numberOfActiveRecords);
         } else {
-            return new RecordsContainerDto(records, numberOfDoneRecords, numberOfActiveRecords);
+            return new RecordsContainerDto(user.getName(), records, numberOfDoneRecords, numberOfActiveRecords);
         }
     }
 
     public void saveRecord(String title) {
         if (title != null && !title.isBlank()) {
-            recordRepository.save(new Record(title));
+            User user = userService.getCurrentUser();
+            recordRepository.save(new Record(title, user));
         }
     }
 
